# PrimeTree

./: .gitignore  CMakeLists.txt  README.md
include/: PrimeTree.h  Primes.h
src/: PrimeTree.cpp  Primes.cpp  primeTreeTests.cpp  testBasic.cpp
